+/- Three.JS Begin

--- a/week2/week2.html
+++ b/week2/week2.html
@@ -25,7 +25,7 @@
             <TD><a href="https://animejs.com/">&nbsp;1. Anime.JS</TD><TD><a href="/week2/anime/animedemo.html">&nbsp;Demo</TD>
         </TR>
         <TR>
-            <TD><a href="https://christinecha.github.io/choreographer-js/">&nbsp;2. ChoreographerJS</TD><TD><a href="/week2/choreographer/choreographerdemo.html">&nbsp;Demo</TD>
+            <TD><a href="https://threejs.org/">&nbsp;2. Three.JS</TD><TD><a href="/week2/three/threedemo.html">&nbsp;Demo</TD>
         </TR>
         <TR>
             <TD><a href="https://michalsnik.github.io/aos/">&nbsp;3. AOS</TD><TD><a href="/week2/aos/aosdemo.html">&nbsp;Demo</TD>
