--- a/week2/three/threedemo.html
+++ b/week2/three/threedemo.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Choreographer Demo</title>
+    <title>Three.JS Demo</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -11,7 +11,18 @@
     <link rel="stylesheet" href="/style.css">
   </head>
   <body>
-      <h1>Choreographer Demo</h1>
+    <script src="three.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
+
+    <link rel="stylesheet" href="style.css">
+    <script src="scripts.js"></script>
+
+
+      <h1>Three.JS Demo</h1>
+      <p> </p>
+        <hr>
+        <br>
+    
 
       
     <!-- Optional JavaScript -->
