--- a/week2/aos/aosdemo.html
+++ b/week2/aos/aosdemo.html
@@ -8,15 +8,114 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
+<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+
     <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
       <h1>Animate On Scroll Demo</h1>
-      
+      <p>Niks maakt je site zo aantrekkelijk als een aantal mooie animaties terwijl je er doorheen scrollt. Deze library maakt dit mogelijk. <br>
+      Scroll naar beneden en laat je verassen!</p>
+        <hr>
+        <br>
+
+        <div class="firsttextbox"></div>
+        <div class="textbox" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+          <p class="text">Animatie?</p>
+        </div>
+        <br>
+        <br>
+        <br>
+          <div class="textbox" data-aos="fade-down">
+            <p class="text">Animatie?</p>
+          </div>
+        <br>
+        <br>      <!-- Tijdelijke <br> voor gemak -->
+        <br>
+            <div class="textbox" data-aos="fade-left">
+              <p class="text">Animatie?</p>
+            </div>
+        <br>
+        <br>
+        <br>
+              <div class="textbox" data-aos="fade-right">
+                <p class="text">Animatie?</p>
+              </div>
+        <br>
+        <br>
+        <br>
+                <div class="textbox" data-aos="flip-up">
+                  <p class="text">Animatie?</p>
+                </div>
+        <br>
+        <br>
+        <br>
+                  <div class="textbox" data-aos="flip-right">
+                    <p class="text">Animatie?</p>
+                  </div>
+        <br>
+        <br>
+        <br>
+                    <div class="textbox" data-aos="slide-up">
+                      <p class="text">Animatie?</p>
+                    </div>
+       <br>
+        <br>
+        <br>
+                      <div class="textbox" data-aos="slide-right">
+                        <p class="text">Animatie?</p>
+                      </div>
+        <br>
+        <br>
+        <br>
+                        <div class="textbox" data-aos="zoom-out-up">
+                          <p class="text">Animatie?</p>
+                        </div>
+        <br>
+        <br>
+        <br>
+                          <div class="textbox" data-aos="zoom-in-right">
+                            <p class="text">Animatie?</p>
+
+                                                    </div>
+
+
+
+
+
     <!-- Optional JavaScript -->
+    
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init({
+  // Global settings:
+  disable: false, // accepts following values: 'phone', 'tablet', 'mobile', boolean, expression or function
+  startEvent: 'DOMContentLoaded', // name of the event dispatched on the document, that AOS should initialize on
+  initClassName: 'aos-init', // class applied after initialization
+  animatedClassName: 'aos-animate', // class applied on animation
+  useClassNames: false, // if true, will add content of `data-aos` as classes on scroll
+  disableMutationObserver: false, // disables automatic mutations' detections (advanced)
+  debounceDelay: 50, // the delay on debounce used while resizing window (advanced)
+  throttleDelay: 99, // the delay on throttle used while scrolling the page (advanced)
+  
+
+  // Settings that can be overridden on per-element basis, by `data-aos-*` attributes:
+  offset: 120, // offset (in px) from the original trigger point
+  delay: 100, // values from 0 to 3000, with step 50ms
+  duration: 400, // values from 0 to 3000, with step 50ms
+  easing: 'ease', // default easing for AOS animations
+  once: false, // whether animation should happen only once - while scrolling down
+  mirror: false, // whether elements should animate out while scrolling past them
+  anchorPlacement: 'top-bottom', // defines which position of the element regarding to window should trigger the animation
+
+});
+    </script>
   </body>
 </html>
