--- a/week2/aos/aosdemo.html
+++ b/week2/aos/aosdemo.html
@@ -24,61 +24,61 @@
 
         <div class="firsttextbox"></div>
         <div class="textbox" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-          <p class="text">Animatie?</p>
+          <p class="text">Fade up</p>
         </div>
         <br>
         <br>
         <br>
           <div class="textbox" data-aos="fade-down">
-            <p class="text">Animatie?</p>
+            <p class="text">Fade down</p>
           </div>
         <br>
         <br>      <!-- Tijdelijke <br> voor gemak -->
         <br>
             <div class="textbox" data-aos="fade-left">
-              <p class="text">Animatie?</p>
+              <p class="text">Fade left</p>
             </div>
         <br>
         <br>
         <br>
               <div class="textbox" data-aos="fade-right">
-                <p class="text">Animatie?</p>
+                <p class="text">Fade right</p>
               </div>
         <br>
         <br>
         <br>
                 <div class="textbox" data-aos="flip-up">
-                  <p class="text">Animatie?</p>
+                  <p class="text">Flip up</p>
                 </div>
         <br>
         <br>
         <br>
                   <div class="textbox" data-aos="flip-right">
-                    <p class="text">Animatie?</p>
+                    <p class="text">Flip right</p>
                   </div>
         <br>
         <br>
         <br>
                     <div class="textbox" data-aos="slide-up">
-                      <p class="text">Animatie?</p>
+                      <p class="text">Slide up</p>
                     </div>
        <br>
         <br>
         <br>
                       <div class="textbox" data-aos="slide-right">
-                        <p class="text">Animatie?</p>
+                        <p class="text">Slide right</p>
                       </div>
         <br>
         <br>
         <br>
                         <div class="textbox" data-aos="zoom-out-up">
-                          <p class="text">Animatie?</p>
+                          <p class="text">Zoom out up</p>
                         </div>
         <br>
         <br>
         <br>
                           <div class="textbox" data-aos="zoom-in-right">
-                            <p class="text">Animatie?</p>
+                            <p class="text">Zoom in right</p>
 
                                                     </div>
 
