++Oefening THREE.JS (CubeGeometry))

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <a href="/week2/week2.html">Week 2 - Short list</a>        
         </li>
         <li>
-            Week 3
+           <a href="/week3/week3.html">Week 3 - Prototype</a> 
         </li>
 
       </ul>    
