--- a/week2/week2.html
+++ b/week2/week2.html
@@ -15,10 +15,12 @@
   <body>
     <h1 class="title">Week 2</h1>
     <p>Kies 3 libraries en maak hier een kleine POC van.</p>
-    
+    <a href="https://github.com/stijnvfhict/advanced-development/tree/master/week2">Github week 2</a>
+
     <h4 class="title2">Waarom deze 3 libraries? </h4>
     <p>Animaties vind ik echt heel vet en hier wil ik graag meer over leren. Vandaar ook de keuze voor 3 libraries die het maken van animaties en fade in/out effecten realiseren.</p>
     <br>
+
 
     <TABLE BORDER="1" class="table">
         <TR>
