--- a/week3/practise/threepractise.html
+++ b/week3/practise/threepractise.html
@@ -44,7 +44,7 @@
 
 
         // geometry
-        var geometry = new THREE.CubeGeometry(100, 100, 100);
+        var geometry = new THREE.TorusKnotGeometry(100, 30, 100, 100);
         
         var material = new THREE.MeshLambertMaterial();
         var mesh = new THREE.Mesh(geometry, material);
