--- a/week3/week3.html
+++ b/week3/week3.html
@@ -26,10 +26,10 @@
 
     <TABLE BORDER="1" class="table">
         <TR>
-            <TD>1. Extra oefening</TD><TD><a href="/week2/anime/animedemo.html">&nbsp;Demo</TD>
+            <TD>1. Extra oefening</TD><TD><a href="/week3/practise/threepractise.html">&nbsp;Demo</TD>
         </TR>
         <TR>
-            <TD>2. Prototype</TD><TD><a href="/week2/three/threedemo.html">&nbsp;Demo</TD>
+            <TD>2. Prototype</TD><TD><a href="/week3/prototype/threeprototype.html">&nbsp;Demo</TD>
         </TR>
         
         
