--- a/week3/prototype/threeprototype.html
+++ b/week3/prototype/threeprototype.html
@@ -8,7 +8,49 @@
 <body>
     <script src="three.js"></script>
 
-    
+    <script>
+
+        var scene, camera, renderer;
+
+        // renderer
+        renderer = new THREE.WebGLRenderer({antialias: true});
+        renderer.setClearColor(0x000000);
+        renderer.setPixelRatio(window.devicePixelRatio);
+        renderer.setSize(window.innerWidth,window.innerHeight);
+
+        // camera
+        camera = new THREE.PerspectiveCamera(35, window.innerWidth / window.innerHeight, 0.1, 3000);
+
+        // scene
+        scene = new THREE.Scene();
+
+        document.body.appendChild(renderer.domElement);
+
+        // lighting
+        var light = new THREE.AmbientLight(0xffffff, 0.5);
+        scene.add(light);
+
+        var light1 = new THREE.PointLight(0xffffff, 0.5);
+        scene.add(light1);
+
+        // geometry
+
+        // mesh
+
+        // animation script?
+
+
+
+        requestAnimationFrame(render);
+
+        function render(){
+            mesh.rotation.x += 0.01;
+            mesh.rotation.y += 0.01;
+
+            renderer.render(scene, camera);
+            requestAnimationFrame(render);
+        }
+    </script>
     
 </body>
 </html>
