--- a/week3/week3.html
+++ b/week3/week3.html
@@ -31,7 +31,9 @@
         <TR>
             <TD>2. Prototype</TD><TD><a href="/week3/prototype/threeprototype.html">&nbsp;Demo</TD>
         </TR>
-        
+        <TR>
+            <TD>Documentatie prototype</TD><TD><a href="/week3/documentatie.html">&nbsp;Documentatie</TD>
+        </TR>
         
     </TABLE>
 
