--- a/week3/prototype/threeprototype.html
+++ b/week3/prototype/threeprototype.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>Three.JS Prototype</title>
 </head>
 <body>
@@ -16,15 +17,43 @@
         // maakt het ronddraaien van de animatie mogelijk
     </script>
 
+    <div style="text-align: center; z-index: 265;">
+        <button onclick="changeModel()" style="margin: 20px; z-index: 265;" type="button" class="btn btn-dark">Change animal</button>
+    </div>
+
 
     <script>
 
-        var mixer, camera, scene, renderer, clock;  // variabelen
+        var mixer, camera, scene, renderer, clock, model, count;  // variabelen
 
-        init();     // functie van het inladen en vaststellen van parameters
-        animate();  // functie die de animatie loopt op basis van de tijd
+        var btn = document.querySelector('button');
+
+        model = "/week3/prototype/horsenew.gltf"
+        count = 1;
+
+
+        function changeModel(){
+
+            console.log("Change Animal");
+            
+            if(count == 1){
+                model = "/week3/prototype/chicken.gltf";
+                count = 0;
+            }
+            else if(count == 0){
+                model = "/week3/prototype/horsenew.gltf";
+                count = 1;
+            }
+
+            return model;
+            init();
+        }
+
+        init();        // functie van het inladen en vaststellen van parameters
+        animate();                  // functie die de animatie loopt op basis van de tijd
 
         function init() {        
+
 
             /// CAMERA instellen
             // pov van 45, grootte op basis van gebruikersscherm, near en far van 1-1000
@@ -57,7 +86,7 @@
             var loader = new THREE.GLTFLoader();
             // laad de gltf file in en voegt het toe aan de scene
             // geeft als parameter de locatie van de animatie mee + een functie die de animatie toevoegd aan de scene        
-            loader.load('/week3/prototype/horsenew.gltf', function (gltf){
+            loader.load(model, function (gltf){
                 
                 scene.add(gltf.scene);
                 /// MIXER
