++Documentation en cleanup
Laatste stukje documentatie toegevoegd. Verder kleine stukjes CSS opgeruimd en algehele code van het prototype netjes gemaakt.

--- a/week2/three/threedemo.html
+++ b/week2/three/threedemo.html
@@ -10,8 +10,8 @@
     <title>Three.js demo</title>
   </head>
   <body>
-    <script src="three.js"></script>
-    <script src="OrbitControls.js"></script>
+    <script src="/threeLibraries/three.js"></script>
+    <script src="/threeLibraries/OrbitControls.js"></script>
     <script>
       
       let scene, camera, renderer;
