Minor update Documentatie.html

--- a/week3/documentatie.html
+++ b/week3/documentatie.html
@@ -28,7 +28,7 @@
             Deze cube heeft een MeshLambertMaterial als material. 
             Deze soort material kan ook licht weerkaatsen en maakt het dus mogelijk om lighting toe te voegen.
         </p>
-        <video width="500" height="300" autoplay loop>
+        <video width="500" height="300" autoplay controls loop>
             <source src="/week3/img/FloatingSquare.mp4" type="video/mp4">
              Your browser does not support the video tag.
         </video>
@@ -43,7 +43,7 @@
             Een voorbeeld hiervan is de TorusKnotGeometry. <br>
             Deze legt als het ware een knoop.
         </p>
-        <video width="500" height="300" autoplay loop>
+        <video width="500" height="300" autoplay controls loop>
             <source src="/week3/img/FloatingThorusKnot.mp4" type="video/mp4">
              Your browser does not support the video tag.
         </video>
@@ -66,7 +66,7 @@
             Deze keer heb ik alleen de animatie van het paard gemaakt zonder de scene. <br>
             Nu dat het paard geanimeerd is kan ik beginnen aan het toevoegen van de animatie aan THREE.JS zodat hij weer te geven is.
         </p>
-        <video width="500" height="300" autoplay loop>
+        <video width="500" height="300" autoplay controls loop>
             <source src="/week3/img/HorseAnimation.mp4" type="video/mp4">
              Your browser does not support the video tag.
         </video>        
@@ -128,7 +128,7 @@
             De Init(); ‘refresht’ nu als het waren elke keer wanneer er op een knop word gedrukt. 
             Het pad van de gekozen animatie word meegestuurd als parameter.
             <br> <br>
-            De laatste commit is <a href="https://www.blendswap.com/blend/13807">hier</a> te vinden.
+            De laatste commit is <a href="https://github.com/stijnvfhict/advanced-development/commit/341206e01b64703c74c47f7cdcb6f65252ed0c4a">hier</a> te vinden.
         </p>
     </div>
     <br>
